Issues fixes mobile and alignment

--- a/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_1/css/spark-layout.css
+++ b/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_1/css/spark-layout.css
@@ -647,6 +647,8 @@ box-shadow: 0px 1px 0px 0px rgba(70,145,91,0.8);}
 
 	.nav li.mobileonly {display: block;}
 
+	.nav > li > ul > li i {    padding: 10px 10px 1px 10px !important;}
+
 }
 
 a.ui-commandlink{text-decoration: none !important; margin-right: 5px;}
